<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ContactUs">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@android:color/holo_red_dark"
        android:singleLine="true"
        android:text="@string/contactUs"
        android:textColor="@color/white"
        android:textSize="34sp"></TextView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:id="@+id/editText2"
            android:hint="@string/subject"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:id="@+id/editText3"
            android:hint="@string/body"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="20sp">
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textSize="30sp">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:layout_alignBottom="@+id/text1"
        android:text="@string/back" />

</RelativeLayout>