<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Matches">

    <include
        android:id="@+id/include"
        layout="@layout/actionbar"/>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:text="@string/matches"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Button
        android:id="@+id/backButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fui_transparent"
        android:shadowColor="@color/fui_transparent"
        android:text="@string/back"  />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/include"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D1D1D1"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="49dp"
                    android:layout_height="59dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:text="@string/jamieSmith"
                    android:textColor="#090909"
                    android:gravity="center_vertical"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button17"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center"
                    android:background="#2C2C2C"
                    android:text="@string/view"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button32"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center"
                    android:background="#2C2C2C"
                    android:text="@string/chat"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button33"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="center"
                    android:background="#2C2C2C"
                    android:text="@string/greet"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"/>

            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>