<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:singleLine="true"
        android:text="@string/meals"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"></TextView>

    <ScrollView
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:background="@color/white"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profilepic">
            </ImageView>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/maryJane"
                android:textSize="25sp"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/march42020"
                android:textSize="25sp"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textAlignment="center">
            </TextView>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/details"
                android:textSize="20sp"
                android:singleLine="true"
                android:gravity="center_horizontal"
                android:textAlignment="center">
            </Button>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button15"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text1"
        android:background="@android:color/holo_red_dark"
        android:text="back" />

</RelativeLayout>